Fixing youtube video on mobile

--- a/src/js/views/Home/main.styl
+++ b/src/js/views/Home/main.styl
@@ -71,6 +71,17 @@ body
     .home__teaser-text
       font-size 20px
 
+.aftermovie
+  iframe
+    width 480px
+    height 300px
+    @media screen and (min-width: $breakPointSmall) and (max-width $breakPointBig)
+      width 100%
+      height 320px
+    @media screen and (max-width: $breakPointSmall)
+      width 100%
+      height 240px
+
 .food-hacks-aftermovie
   position: fixed;
   top: 0;
